--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span>Shrushti Khedkar </span>
                     </h1>
 
-                    <h2>I'm a Student of</h2>
+                    <h2>I'm a Student of CSE</h2>
                     <h2>PRMIT&R</h2>
 
                     <div class="btn-wrapper">
