--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <!-- image -->
                 <div class="image">
-                    <img src="profile.png" alt="">
+                    <img src="https://github.com/shrushti-khedkar/Portfolio/blob/main/IMG_20250308_110430.jpg" alt="">
                 </div>
             </div>
 
